# stratum

./: CMakeLists.txt  README.md  config.example.json  config.json
deploy/: stratum-server.service
include/: config.hpp  job_manager.hpp  logger.hpp  network.hpp  pool_engine.hpp  rpc_client.hpp  stratum_server.hpp  utils.hpp  zmq_client.hpp
src/: job_manager.cpp  logger.cpp  main.cpp  network.cpp  pool_engine.cpp  rpc_client.cpp  stratum_server.cpp  zmq_client.cpp
